# cryptotrading

./: .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  .htaccess  .vercelignore  AI_INTELLIGENCE_OPPORTUNITIES_SCAN.md  AI_INTELLIGENCE_UPGRADE_SUMMARY.md  AWS_DATA_EXCHANGE_A2A_AGENT.md  AWS_SERVICES_RATING.md  AWS_SETUP_SECURITY.md  CDS_100_PROPERTY_COVERAGE.md  CDS_COVERAGE_VERIFICATION.md  CDS_UI_ALIGNMENT_REPORT.md  CONTINUOUS_LEARNING_ANALYSIS.md  CRITICAL_ISSUES_FIXED.md  CRON_SETUP.md  DATABASE_AUDIT_REPORT.md  DATABASE_COVERAGE_AUDIT.md  DEPLOYMENT_GUIDE.md  Day1_Progress_Report.md  FOCUSED_AI_UPGRADE_SUMMARY.md  GLEAN_EXTENSION_COMPLETE.md  MASTER_TODO_30_DAYS.md  MCP_UI5_INTEGRATION.md  PHASE1_AI_ENHANCEMENT_SUMMARY.md  README.md  README_MCP.md  ROOT_FOLDER_ANALYSIS.md  S3_STORAGE_INTEGRATION.md  SECRET_MANAGEMENT_GUIDE.md  SECRET_MANAGER_QUICKSTART.md  SECRET_SYSTEM_SUMMARY.md  URGENT_SETUP.md  USER_MANAGEMENT_COMPLETED.md  a2a_capabilities_report.json  a2a_full_conformance_plan.md  app.py  app_modular.py  (+64 more)
api/: app_vercel.py  auth_api.py  aws_data_exchange_api.py  cds_a2a_service.py  cds_data_pipeline_service.py  cds_service_adapter.py  dashboard_endpoints.py  data_loader.py  data_loading_service.py  index.py  mcp.py  mcp_openapi_generator.py  mcp_tool_discovery.py  mcts-calculate.ts  mcts-python.py  mcts_python.py  news_api.py  news_service_adapter.py  technical_analysis_api.py  unified_news_api.py  user_search_service.py
app/: Component-preload.js  Component.js  index-fiori.html  index.html  manifest.json
cds/: a2a-model.cds  analytics-model.cds  analytics-service.cds  code-analysis-service.cds  data-loading-service.cds  data-model.cds  data-pipeline-model.cds  intelligence-model.cds  monitoring-system-model.cds  news-model.cds  news-service.cds  trading-model.cds  trading-service.cds  user-model.cds  user-service.cds
config/: .encryption_key  __init__.py  dev_workflow.py  enhanced_indicators.yaml  exchanges.json  glean.json  secret_manager.py  secrets.encrypted  vercel_secrets.py
contracts/: A2ADataExchange.sol  A2AMessaging.sol  A2ARegistry.sol
data/: clrs_tree_integration_test_results.json  comprehensive_test_results.json  cryptotrading.db  cryptotrading.db-shm  cryptotrading.db-wal  final_production_evaluation_results.json  focused_evaluation_results.json  glean_mcp_integration_results.json  integration_analysis_results.json  real_market_data.db  rex.db  seal_end_to_end_validation_results.json  test_market_data.db  test_real_data.db  verification_results_100.json  рекс.db
deploy/: build_deploy_framework.py  haproxy_mcp_loadbalancer.cfg  nginx_mcp_loadbalancer.conf
deployment/: README.md  (+1 more)
(+990 files in other folders)
